[gd_scene load_steps=2 format=3 uid="uid://cfw0jrlssgtic"]

[ext_resource type="Script" path="res://scenes/Interface/UI.gd" id="1_xcdvj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcdvj")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -85.0
offset_right = 258.0
grow_horizontal = 2
grow_vertical = 0
vertical = true

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="TauntButton" type="Button" parent="BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Taunt"

[node name="Label" type="Label" parent="BoxContainer/HBoxContainer/TauntButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 21.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="BoxContainer/HBoxContainer/TauntButton"]
layout_mode = 0
offset_left = 79.5
offset_top = 31.0
offset_right = 100.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="DamageButton" type="Button" parent="BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Damage"

[node name="Label" type="Label" parent="BoxContainer/HBoxContainer/DamageButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 21.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "2"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="BoxContainer/HBoxContainer/DamageButton"]
offset_left = 79.5
offset_top = 31.0
offset_right = 100.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="HealButton" type="Button" parent="BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Heal"

[node name="Label" type="Label" parent="BoxContainer/HBoxContainer/HealButton"]
layout_mode = 0
offset_top = 2.0
offset_right = 21.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "3"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="BoxContainer/HBoxContainer/HealButton"]
offset_left = 79.5
offset_top = 31.0
offset_right = 100.5
offset_bottom = 51.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="HeroInformation" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Hero_0" type="BoxContainer" parent="BoxContainer/HeroInformation"]
layout_mode = 2
vertical = true

[node name="Healthbar" type="ProgressBar" parent="BoxContainer/HeroInformation/Hero_0"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
step = 1.0
rounded = true

[node name="RaceClass" type="Label" parent="BoxContainer/HeroInformation/Hero_0"]
layout_mode = 2
text = "Human Paladin"
horizontal_alignment = 1

[node name="Hero_1" type="BoxContainer" parent="BoxContainer/HeroInformation"]
layout_mode = 2
vertical = true

[node name="Healthbar" type="ProgressBar" parent="BoxContainer/HeroInformation/Hero_1"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
step = 1.0
rounded = true

[node name="RaceClass" type="Label" parent="BoxContainer/HeroInformation/Hero_1"]
layout_mode = 2
text = "Human Paladin"
horizontal_alignment = 1

[node name="Hero_2" type="BoxContainer" parent="BoxContainer/HeroInformation"]
layout_mode = 2
vertical = true

[node name="Healthbar" type="ProgressBar" parent="BoxContainer/HeroInformation/Hero_2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
step = 1.0
rounded = true

[node name="RaceClass" type="Label" parent="BoxContainer/HeroInformation/Hero_2"]
layout_mode = 2
text = "Human Paladin"
horizontal_alignment = 1

[node name="Hero_3" type="BoxContainer" parent="BoxContainer/HeroInformation"]
layout_mode = 2
vertical = true

[node name="Healthbar" type="ProgressBar" parent="BoxContainer/HeroInformation/Hero_3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
step = 1.0
rounded = true

[node name="RaceClass" type="Label" parent="BoxContainer/HeroInformation/Hero_3"]
layout_mode = 2
text = "Human Paladin"
horizontal_alignment = 1

[node name="Hero_4" type="BoxContainer" parent="BoxContainer/HeroInformation"]
layout_mode = 2
vertical = true

[node name="Healthbar" type="ProgressBar" parent="BoxContainer/HeroInformation/Hero_4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
step = 1.0
rounded = true

[node name="RaceClass" type="Label" parent="BoxContainer/HeroInformation/Hero_4"]
layout_mode = 2
text = "Human Paladin"
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 117.0
offset_right = 935.0
offset_bottom = 401.0

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverPanel"]
layout_mode = 2
offset_top = 63.0
offset_right = 684.0
offset_bottom = 207.0
bbcode_enabled = true
text = "[p align=center][font_size=30px]Congratulations! 
You have slayed the _________![/font_size][/p]

[p align=center]On to the next adventure![/p]"

[node name="Button" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 262.0
offset_top = 207.0
offset_right = 417.0
offset_bottom = 238.0
text = "Quit to main menu"

[node name="GameOverPanel_Defeat" type="Panel" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 117.0
offset_right = 935.0
offset_bottom = 401.0

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverPanel_Defeat"]
layout_mode = 2
offset_top = 63.0
offset_right = 684.0
offset_bottom = 207.0
bbcode_enabled = true
text = "[p align=center][font_size=30px]You have been defeated![/font_size][/p]

[p align=center]Again[/p]"

[node name="Button" type="Button" parent="GameOverPanel_Defeat"]
layout_mode = 0
offset_left = 262.0
offset_top = 207.0
offset_right = 417.0
offset_bottom = 238.0
text = "Quit to main menu"

[node name="BossHealthBarContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 61.0
grow_horizontal = 2
alignment = 1
vertical = true

[node name="BossHealthBar" type="ProgressBar" parent="BossHealthBarContainer"]
layout_mode = 2
size_flags_vertical = 3
value = 100.0

[node name="Label" type="Label" parent="BossHealthBarContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Boss Name"
horizontal_alignment = 1
